# Olly

./: .gitignore  CLAUDE.md  GENERATIVE_UI.md  PLUGIN_CALENDAR.md  README.md  SECURITY_AUDIT.md  bench_performance.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  Config.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tauri-plugin-calendar/: Cargo.toml  README.md  build.rs  package.json
src-tauri/tauri-plugin-calendar/examples/tauri-app/: package.json
src-tauri/tauri-plugin-calendar/examples/tauri-app/src/: App.svelte
src-tauri/tauri-plugin-calendar/examples/tauri-app/src-tauri/: Cargo.toml
src-tauri/tauri-plugin-calendar/examples/tauri-app/src-tauri/capabilities/: default.json
src-tauri/tauri-plugin-calendar/examples/tauri-app/src-tauri/src/: lib.rs
src-tauri/tauri-plugin-calendar/examples/tauri-app/src/lib/: Greet.svelte
src-tauri/tauri-plugin-calendar/guest-js/: index.ts
src-tauri/tauri-plugin-calendar/macos/: calendar_bridge.m
src-tauri/tauri-plugin-calendar/permissions/: default.toml
src-tauri/tauri-plugin-calendar/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-calendar/permissions/autogenerated/commands/: fetch_events.toml
src-tauri/tauri-plugin-calendar/permissions/schemas/: schema.json
src-tauri/tauri-plugin-calendar/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/tauri-plugin-calendar/src/desktop/: macos.rs
src/lib/: index.js  tools.js  utils.js
(+21 files in other folders)
