[package]
name = "olly"
version = "0.1.0"
description = "Local LLM Chat"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unminimize", "window-show", "window-unmaximize", "window-start-dragging", "window-minimize", "window-hide", "window-close", "window-maximize", "macos-private-api", "http-all", "os-all", "app-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
objc = "0.2.7"
cocoa = "0.24"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
keyring = "3.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
